@startuml


package "templates" {
  class LoginUI {
  + main() 
  }
  class CatalogoUI {
  + main()
  }
  class MeusEmprestimosUI {
  + main()
  }
  class EmprestimosAtivosUI {
  + main()
  }
  class HistoricoEmprestimosUI {
  + main()
  }
  class SolicitacoesUI {
  + main()
  }
  class ManterUsuarioUI {
  + main()
  }
  class ManterBibliotecarioUI {
  + main()
  }
  class ManterAutorUI {
  + main()
  }
  class ManterAutoriaUI {
  + main()
  }
  class ManterLivroUI {
  + main()
  }
  class ManterExemplarUI {
  + main()
  }
  class ManterEmprestimoUI {
  + main()
  }
  class ManterMultaUI {
  + main()
  }
}

class IndexUI {
  + main()
  + sidebar()
  + menu_visitante()
  + menu_usuario()
  + menu_bibliotecario()
  + menu_admin()
  + sair_do_sistema()
}

IndexUI --> LoginUI
IndexUI --> CatalogoUI
IndexUI --> EmprestimosAtivosUI
IndexUI --> HistoricoEmprestimosUI
IndexUI --> SolicitacoesUI
IndexUI --> ManterUsuarioUI
IndexUI --> ManterBibliotecarioUI
IndexUI --> ManterAutorUI
IndexUI --> ManterAutoriaUI
IndexUI --> ManterLivroUI
IndexUI --> ManterExemplarUI
IndexUI --> ManterEmprestimoUI
IndexUI --> ManterMultaUI

' =========================
' VIEW
' =========================
class View {

  +criar_admin()

  +bibliotecario_autenticar(cpf, senha)
  +bibliotecario_listar() : list<Bibliotecario>
  +bibliotecario_inserir(cpf, senha)
  +bibliotecario_atualizar(cpf, senha)
  +bibliotecario_excluir(cpf)

  +usuario_autenticar(cpf, senha)
  +usuario_listar() : list<Usuario>
  +usuario_listar_cpf(cpf) : Usuario
  +usuario_inserir(cpf, matricula, nome, email, telefone, senha)
  +usuario_atualizar(cpf, matricula, nome, email, telefone, senha)
  +usuario_excluir(cpf)

  +autor_listar() : list<Autor>
  +autor_listar_id(id) : Autor
  +autor_inserir(nome)
  +autor_atualizar(id, nome)
  +autor_excluir(id)

  +livro_listar() : list<Livro>
  +livro_listar_codigo(codigo) : Livro
  +livro_inserir(codigo, nome)
  +livro_atualizar(codigo, nome)
  +livro_excluir(codigo)
  +livro_get_autores(codigo) : list<Autor>
  +livro_get_exemplares(codigo) : list<Exemplar>

  +autoria_listar() : list<Autoria>
  +autoria_inserir(id_autor, codigo_livro)
  +autoria_excluir(id_autor, codigo_livro)

  +exemplar_listar() : list<Exemplar>
  +exemplar_listar_id(id) : Exemplar
  +exemplar_inserir(codigo_livro)
  +exemplar_atualizar(id, disponibilidade, codigo_livro)
  +exemplar_excluir(id)

  +emprestimo_listar() : list<Emprestimo>
  +emprestimo_inserir(dt_emprestimo, dt_prazo, cpf_usuario, id_exemplar, confirmado)
  +emprestimo_atualizar(dt_emprestimo, dt_prazo, cpf_usuario, id_exemplar, confirmado)
  +emprestimo_devolver(id, dt_devolucao)
  +emprestimo_confirmar(id)

  +multa_listar() : list<Multa>
  +multa_inserir(id_emprestimo, valor, descricao)
  +multa_excluir(id)
}

LoginUI --> View
CatalogoUI --> View
EmprestimosAtivosUI --> View
HistoricoEmprestimosUI --> View
SolicitacoesUI --> View
ManterUsuarioUI --> View
ManterBibliotecarioUI --> View
ManterAutorUI --> View
ManterAutoriaUI --> View
ManterLivroUI --> View
ManterExemplarUI --> View
ManterEmprestimoUI --> View
ManterMultaUI --> View
MeusEmprestimosUI --> View

' =========================
' MODELS
' =========================
package "models" {

  class Bibliotecario {
    - cpf : str
    - senha : str
  }

  class Usuario {
    - cpf : str
    - matricula : str
    - nome : str
    - email : str
    - telefone : str
    - senha : str
  }

  class Autor {
    - id : int
    - nome : str
  }

  class Livro {
    - codigo : int
    - nome : str
  }

  class Autoria {
    - id_autor : int
    - codigo_livro : int
  }

  class Exemplar {
    - id : int
    - disponibilidade : bool
    - codigo_livro : int
  }

  class Emprestimo {
    - id : int
    - dt_emprestimo : datetime
    - dt_prazo : datetime
    - dt_devolucao : datetime
    - cpf_usuario : str
    - id_exemplar : int
    - confirmado : bool
  }

  class Multa {
    - id : int
    - id_emprestimo : int
    - valor : float
    - descricao : str
  }
  
  Usuario "1" <-- "0..*" Emprestimo
  Exemplar "1" <-- "0..*" Emprestimo
  Livro "1" <-- "1..*" Exemplar
  Autor "1" <-- "0..*" Autoria
  Livro "1" <-- "0..*" Autoria
  Emprestimo "1" <-- "0..1" Multa
}




' =========================
' DAO
' =========================
package "DAO" {

  abstract class DAO {
    + inserir(obj)
    + listar() : list
    + listar_id(id)
    + atualizar(obj)
    + excluir(obj)
  }

  class BibliotecarioDAO {
    + inserir(b:Bibliotecario)
    + listar() : list<Bibliotecario>
    + listar_id(cpf:str) : Bibliotecario
    + atualizar(b:Bibliotecario)
    + excluir(b:Bibliotecario)
  }

  class UsuarioDAO {
    + inserir(u:Usuario)
    + listar() : list<Usuario>
    + listar_id(cpf:str) : Usuario
    + atualizar(u:Usuario)
    + excluir(u:Usuario)
  }

  class AutorDAO {
    + inserir(a:Autor)
    + listar() : list<Autor>
    + listar_id(id:int) : Autor
    + atualizar(a:Autor)
    + excluir(a:Autor)
  }

  class LivroDAO {
    + inserir(l:Livro)
    + listar() : list<Livro>
    + listar_id(codigo:int) : Livro
    + atualizar(l:Livro)
    + excluir(l:Livro)
  }

  class AutoriaDAO {
    + inserir(a:Autoria)
    + listar() : list<Autoria>
    + listar_id(chave:tuple) : Autoria
    + atualizar(a:Autoria)
    + excluir(a:Autoria)
  }

  class ExemplarDAO {
    + inserir(e:Exemplar)
    + listar() : list<Exemplar>
    + listar_id(id:int) : Exemplar
    + atualizar(e:Exemplar)
    + excluir(e:Exemplar)
  }

  class EmprestimoDAO {
    + inserir(e:Emprestimo)
    + listar() : list<Emprestimo>
    + listar_id(id:int) : Emprestimo
    + atualizar(e:Emprestimo)
    + excluir(e:Emprestimo)
  }

  class MultaDAO {
    + inserir(m:Multa)
    + listar() : list<Multa>
    + listar_id(id:int) : Multa
    + atualizar(m:Multa)
    + excluir(m:Multa)
  }

  BibliotecarioDAO --|> DAO
  UsuarioDAO --|> DAO
  AutorDAO --|> DAO
  LivroDAO --|> DAO
  AutoriaDAO --|> DAO
  ExemplarDAO --|> DAO
  EmprestimoDAO --|> DAO
  MultaDAO --|> DAO
}

View --> BibliotecarioDAO
View --> UsuarioDAO
View --> AutorDAO
View --> LivroDAO
View --> AutoriaDAO
View --> ExemplarDAO
View --> EmprestimoDAO
View --> MultaDAO


@enduml
